themes/SuiteP/css/style.css
/* ... */
.detail-view-row .label, .edit-view-row .label, #lineItems {
    color: #534D64;
    display: inline;
    padding: 0 0 0 8px;
    font-size: 14px;
    font-weight: 700;
    line-height: 48px;
    text-align: left;
    white-space: nowrap;
    vertical-align: baseline;

}

slot, #lead_queries_Div td {
      color: #534D64;
      font-size: 14px;
      font-weight: 700;
      line-height: 48px;
      text-align: left;
      white-space: nowrap;
      vertical-align: baseline;

}

#html_div {
    white-space: normal;
}

.dataField {
    min-height: 48px;
    line-height: 48px;
}

.detail-view-field {
    color: #534D64;
    display: inline;
    padding:  12px;
    font-size: 14px;
    font-weight: 400;
    line-height: 20px;
    min-height: 48px;
    text-align: left;
    white-space: nowrap;
    vertical-align: baseline;
    background-color: #F5F5F5;
    border: 1px solid transparent;
    border-radius: 4px;
}

.detail-view-field a {
    font-weight: 700;
}

[field="billing_address_street"].detail-view-field,
[field="shipping_address_street"].detail-view-field {
    padding: 16px 16px 32px 16px;
}

[field="shipping_address_street"].detail-view-field .button,
[field="billing_address_street"].detail-view-field .button {
    background-color: #AA9DCC;
}

[field="shipping_address_street"].detail-view-field .button:hover,
[field="billing_address_street"].detail-view-field .button:hover {
    background-color: #9589b3;
}


.edit-view-field textarea,
.inline_edit_field textarea {
    line-height: 24px;
    padding-top: 14px;
}

#no-tab-actions > ul > li {
    margin: 8px 8px 8px 0px;
}

.detail tr td {
    border: none;
    vertical-align: top;
    padding: 5px 6px 5px 6px;
    vertical-align: top;
    text-align: left;
}

.detail tr td[scope=row] {
    margin-top: 2px;
    margin-bottom: 10px;
    text-align: right;
    white-space: nowrap;
}

.detail tr td > li {
    margin-left: 1.5em;
}


#EditView > table {
    overflow: auto;
    margin-bottom: 0px;
}

#EditView_tabs.yui-navset.yui-navset-top {
    padding: 0px 5px 5px 5px;
}

#EditView_tabs.yui-navset.yui-navset-top .nav.nav-tabs {
    margin-top: 15px;
}

#EditView_tabs .nav.nav-tabs {
    margin: 0;
}

#EditView_tabs .tab-content {
    margin: 0;
}

#EditView .edit tr td {
    font-weight: 700;
    color: #534D64;
}

#EditView .edit input,
#EditView .edit textarea,
#EditView .edit select,
#EditView .edit option,
select,
option[selected],
.sqsEnabled {
    font-weight: normal;
    color: #534D64;
}

.edit {
    padding: 0 6px 12px 10px;
}

.label {
    font-size: 14px;
    color: #534D64;
}

.edit > table {
    margin-bottom: 0;
    padding: 3px 3px 3px 10px !important;
}

.edit h4 {
    text-align: left;
    padding-top: 0;
    margin-top: 10px;
    padding-left: 0;
}

.edit tr td {
    font-weight: normal;
    vertical-align: top;
}

.edit tr td[scope=row] {
    padding: 0px 10px 0px 10px !important;
    text-align: left;
    vertical-align: top;
    height: 40px;
    line-height: 40px;
}

.edit tr th {
    padding: 5px 5px 5px 7px !important;
}

#EditView input[type="button"] {
    margin: 4px;
    padding: 0 10px;
}

fieldset {
    margin-top: 32px;
}

fieldset legend {
    border: none;
    font-size: 16px;
    font-weight: 700;
    padding-left: 33.33333333%;
}

fieldset table {
    background: none !important;
}

fieldset > table tr > td:first-of-type {
    width: 33.33333333%;
}

fieldset tr, fieldset td {
    border: none !important;
}

fieldset label {
    border: none;
    font-size: 14px;
    font-weight: 700;
    color: #534D64;
}

.validation-message {
    border: 1px solid transparent;
    border-radius: 4px;
    margin: 4px;
}

table#tabFormPagination td, #tabFormPagination, #EditView > table#tabFormPagination.detail.view {
    border-bottom: none;
    margin-bottom: 0;
}

.edit tr td table, .edit tr td table tr td {
    padding: 3px 3px 3px 0 !important;
}

.search {
    margin: 0 0 4px 0 !important;
    padding: 10px 6px 12px 10px;
}

.search > table {
    padding: 0 !important;
    margin: 0;
}

.search td span {
    color: #444444;
}

td.submitButtons {
    padding-left: 20px;
}

td.submitButtons input {
    margin-bottom: 10px;
}

.search td input[type=text], .search td input[type=password], .search td select {
    width: 260px !important;
    height: 40px;
    line-height: 40px;
    border: none;
    border-radius: 3px;
}

.list, .edit .list {
    padding: 0 !important;
    margin-bottom: 10px;
}

.list tr.pagination,
.list tr.pagination td,
.list tr.pagination td table {
    padding: 0;
    border: 0;
    margin: 0;
}

/* PAGINATION */

.list tr#pagination {
}

.list tr#pagination td {
    padding: 0px !important;
}

.list tr#pagination td table.paginationTable {
}

.list tr#pagination td table.paginationTable tr {
    padding: 0px !important;
}

.list tr#pagination td table.paginationTable td.paginationActionButtons {
    background-color: #BFCAD3;
    padding: 5px 0px 5px 0px !important;
}

.list tr#pagination td table.paginationTable td.paginationChangeButtons {
    background-color: #BFCAD3;
    padding: 5px 5px 5px 0px !important;
}

button#listViewStartButton_top, button#listViewStartButton_bottom {
    width: 26px;
    background-image: none, url("../../../../themes/SuiteP/images/p_pag_tools.svg"), url("../../../../themes/SuiteP/images/p_pag_tools.png");
    background-repeat: no-repeat;
    background-position: 9px -29px;
    margin-right: 2px;
}

button#listViewStartButton_top[disabled], button#listViewPrevButton_top[disabled], button#listViewNextButton_top[disabled], button#listViewEndButton_top[disabled], button#listViewStartButton_bottom[disabled], button#listViewPrevButton_bottom[disabled], button#listViewNextButton_bottom[disabled], button#listViewEndButton_bottom[disabled] {
    opacity: .5;
    cursor: default;
}

button#listViewStartButton_top img, button#listViewStartButton_bottom img {
    display: none;
}
/* ... */

